--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -12,31 +12,51 @@
   align-items: center;
   padding: 15px 20px;
 }
+@media screen and (max-width: 37.5em) {
+  .header-content {
+    flex-wrap: wrap;
+  }
+}
 
 .logo {
   display: flex;
   align-items: center;
-  width: 10%;
-  /* background-color: lightblue; */
+  width: 25%;
+}
+@media screen and (max-width: 1060px) {
+  .logo {
+    width: 30%;
+    /* background-color: lightblue; */
+  }
+}
+
+@media screen and (max-width: 37.5em) {
+  .logo {
+    width: 50%;
+  }
 }
 
 .logo a {
-  width: 100%;
+  font-family: "Merienda", cursive;
+  text-transform: capitalize;
+  font-size: 2rem;
 }
-.logo-cont{
-  height: 80px;
-  width: 100%;
-}
-.logo-cont img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .search-bar {
-  width: 60%;
+  width: 45%;
   margin: 0 20px;
-  background-color: lightpink;
+  /* background-color: lightpink; */
+}
+@media screen and (max-width: 66.25em) {
+  .search-bar {
+    width: 45%;
+  }
+}
+@media screen and (max-width: 37.5em) {
+  .search-bar {
+    width: 100%;
+    order: 3;
+    margin: 0;
+  }
 }
 
 .search-bar form {
@@ -55,7 +75,11 @@
   width: 90%;
   outline: none;
 }
-
+@media screen and (max-width: 66.25em) {
+  .search-bar input {
+    width: 85%;
+  }
+}
 .search-bar button {
   background-color: var(--primary-color);
   color: white;
@@ -65,10 +89,17 @@
   cursor: pointer;
   transition: background-color 0.3s;
   width: 10%;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.search-bar button svg{
-  font-size: 20px;
+@media screen and (max-width: 66.25em) {
+  .search-bar button {
+    width: 15%;
+  }
+}
+.search-bar button svg {
+  font-size: 1.5rem;
   font-weight: 800;
 }
 
@@ -81,24 +112,38 @@
   align-items: center;
   justify-content: flex-end;
   width: 30%;
-  /* background-color: lightgreen; */
   gap: 1rem;
+}
+@media screen and (max-width: 66.25em) {
+  .header-icons {
+    width: 25%;
+    /* background-color: lightgreen; */
+  }
+}
+
+@media screen and (max-width: 37.5em) {
+  .header-icons {
+    width: 100%;
+    order: 2;
+  }
 }
 
 .header-icon-wrapper {
   position: relative;
-  margin-left: 20px;
+  /* margin-left: 20px; */
 }
 
-.header-icon, .cart-link {
+.header-icon,
+.cart-link {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   align-items: center;
   cursor: pointer;
   padding: 5px;
 }
 
-.header-icon svg, .cart-icon svg {
+.header-icon svg,
+.cart-icon svg {
   font-size: 1.5rem;
 }
 
@@ -194,72 +239,4 @@
 .header-icons.minimized {
   width: auto;
   margin-left: auto;
-}
-
-/* Media Queries */
-@media (max-width: 768px) {
-  .header-content {
-    flex-wrap: wrap;
-  }
-  
-  .logo {
-    width: 15%;
-    margin-bottom: 0;
-  }
-  
-  .search-bar {
-    order: 2;
-    width: 65%;
-    margin: 0 0 0 20px;
-  }
-  
-  .header-icons {
-    width: 20%;
-    order: 1;
-    justify-content: flex-end;
-  }
-  
-  .header-icons.minimized {
-    width: auto;
-  }
-}
-
-@media (max-width: 576px) {
-  .header-content {
-    padding: 10px 15px;
-  }
-  
-  .logo {
-    width: 20%;
-  }
-  
-  .logo-cont {
-    height: 60px;
-  }
-  
-  .search-bar {
-    order: 3;
-    width: 100%;
-    margin: 10px 0 0;
-  }
-  
-  .header-icons {
-    width: 80%;
-    justify-content: flex-end;
-  }
-  
-  .cart-count.mini {
-    top: -5px;
-    right: -5px;
-  }
-}
-
-@media (max-width: 480px) {
-  .header-icon span {
-    display: none;
-  }
-  
-  .header-icon-wrapper {
-    margin-left: 15px;
-  }
 }
