--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -31,6 +31,29 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
 }
+.see-more-container {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.see-more-button {
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--primary-color);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  /* transition: 0.3s ease; */
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+}
+
+.see-more-button:hover {
+  color: var(--primary-dark);
+}
+
 
 .about-maasai {
   padding: 70px 0;
