--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -38,7 +38,7 @@
 .logo a {
   font-family: "Merienda", cursive;
   text-transform: capitalize;
-  font-size: 2rem;
+  font-size: 3.2rem;
 }
 .search-bar {
   width: 45%;
@@ -69,9 +69,13 @@
   padding: 10px 15px;
   border: 1px solid var(--primary-color);
   border-radius: none;
-  font-size: 1rem;
+  font-size: 1.6rem;
   width: 90%;
   outline: none;
+}
+.search-bar input::placeholder{
+  font-size: 1.6rem;
+  font-family: inherit;
 }
 @media screen and (max-width: 66.25em) {
   .search-bar input {
@@ -81,6 +85,7 @@
 .search-bar button {
   background-color: var(--primary-color);
   color: white;
+  font-size: 1.6rem;
   border: 1px solid var(--primary-color);
   padding: 0 15px;
   border-radius: none;
@@ -140,11 +145,11 @@
 
 .header-icon svg,
 .cart-icon svg {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 .header-icon span {
-  font-size: 1rem;
+  font-size: 1.6rem;
   white-space: nowrap;
   font-weight: 450;
 }
@@ -159,7 +164,7 @@
   right: 42px;
   background-color: var(--primary-color);
   color: white;
-  font-size: 0.7rem;
+  font-size: 1.1rem;
   border-radius: 50%;
   width: 18px;
   height: 18px;
@@ -199,7 +204,7 @@
 
 .dropdown-menu a svg {
   margin-right: 10px;
-  font-size: 1rem;
+  font-size: 1.6rem;
 }
 .mobile-menu {
   width: 250px;
