--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -61,11 +61,11 @@
   display: flex;
   flex-direction: column;
 }
-.product-name {
+.product-card-product-name {
   color: var(--text-color);
+  font-size: 1.8rem;
   font-weight: 600;
   margin-bottom: 10px;
-  font-size: 1rem;
   text-decoration: none;
   display: -webkit-box;
   -webkit-line-clamp: 1;
@@ -75,11 +75,11 @@
   transition: color 0.2s ease;
 }
 
-.product-name:hover {
+.product-card-product-name:hover {
   color: var(--primary-color);
 }
 
-.product-price {
+.product-card-product-price {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -87,30 +87,33 @@
   margin-bottom: 10px;
 }
 
-.current-price {
+.current-price-of-product {
   font-weight: 700;
-  font-size: 1.1rem;
+  font-size: 1.9rem;
   color: var(--primary-color);
 }
 
-.original-price {
+.product-card-original-price {
   text-decoration: line-through;
   color: var(--text-light);
-  font-size: 0.9rem;
+  font-size: 1.3rem;
 }
 
-.discount-percentage {
+.product-card-discount-percentage {
   background-color: var(--primary-light);
   color: white;
   padding: 2px 6px;
   border-radius: 4px;
-  font-size: 0.8rem;
+  font-size: 1.4rem;
   font-weight: 600;
 }
 
-.product-rating {
+.product-card-rating {
   display: flex;
   margin-bottom: 15px;
+}
+.product-card-rating svg{
+  font-size: 1.8rem;
 }
 .product-manipulation {
   display: flex;
@@ -157,7 +160,7 @@
   padding: 8px 12px;
   cursor: pointer;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.6rem;
 }
 
 .quantity-btn:hover {
