--- a/src/styles/CartPage.css
+++ b/src/styles/CartPage.css
@@ -18,7 +18,26 @@
   margin-bottom: 20px;
   color: var(--text-light);
 }
-
+.empty-cart-link-cont {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.empty-cart-link {
+  display: inline-block;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem 2rem;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.empty-cart-link:hover {
+  color: white;
+  background-color: var(--primary-dark);
+}
 .continue-shopping {
   display: inline-block;
   background-color: transparent;
@@ -206,7 +225,7 @@
 }
 
 .cart-summary h2 {
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid var(--border-color);
@@ -222,7 +241,7 @@
 .cart-page-total {
   display: flex;
   justify-content: space-between;
-    margin-bottom: 15px;
+  margin-bottom: 15px;
   font-weight: 700;
   font-size: 1.7rem;
   margin-top: 15px;
@@ -268,6 +287,9 @@
 }
 
 @media (max-width: 768px) {
+  .cart-page {
+    padding-inline: 2rem;
+  }
   .cart-item {
     grid-template-columns: 1fr;
     gap: 15px;
