--- a/src/styles/CustomerPage.css
+++ b/src/styles/CustomerPage.css
@@ -93,9 +93,8 @@
   }
   
   .customer-nav {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
   
   .customer-nav a {
