--- a/src/styles/RegisterPage.css
+++ b/src/styles/RegisterPage.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1.2rem;
+  padding: 0rem 1.2rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 @media screen and (max-width: 62.5em) {
@@ -31,6 +31,7 @@
   font-size: 2rem;
   font-weight: 800;
   margin-bottom: 1rem;
+  color: var(--primary-color);
 }
 .registration-form-body {
   width: 100%;
