--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -34,7 +34,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: var(--background-light);
+  background-color: rgba(133, 117, 117, 0.5);
   border: none;
   border-radius: 50%;
   width: 40px;
@@ -51,9 +51,8 @@
 .product-card-wishlist-button:hover {
   transform: scale(1.1);
 }
-
-.product-card-wishlist-button.active {
-  background-color: var(--primary-color);
+.product-card-wishlist-button svg{
+  color: var(--primary-color);
 }
 .product-card-content {
   padding: 10px;
