--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -22,11 +22,12 @@
   position: relative;
   height: 200px;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 .product-card-image img {
-  width: 100%;
-  height: 100%;
+  height: 170px;
   object-fit: cover;
   transition: transform 0.3s ease;
 }
